# kleisli-functors

./: .hindent.yaml  README.md  kleisli-functors.cabal
src/Control/Applicative/: Results.hs
src/Control/Kleisli/: Adjunction.hs  Functor.hs
