name:                kleisli-functors
version:             0.1.0.0
synopsis:            Functors from Kleisli categories to Hask
description:         Please see README.md
homepage:            https://github.com/ElvishJerricco/kleisli-functors#readme
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          elvishjerricco@gmail.com
copyright:           2016 Will Fancher
category:            Monads, Functors
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Kleisli.Functor
                     , Control.Kleisli.Adjunction
  build-depends:       base       >= 4.9 && < 5
                     , async      >= 2.1 && < 2.2
                     , containers >= 0.5 && < 0.6
                     , validation >= 0.5 && < 0.6
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/kleisli-functors
